fixed smaller screen subtitle alignment; removed nowrap property

--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -6,7 +6,6 @@ section {
   margin: 0px;
   padding: 0px;
   overflow-x: hidden; 
-  white-space:nowrap;
   background-color: var(--primary-color);
 }
 
